--- a/checkboxTask/index.html
+++ b/checkboxTask/index.html
@@ -20,7 +20,21 @@
 
             <p></p>
             <label style="user-select: none">
-                <input type="checkbox" class="checkbox">
+                <input type="checkbox" class="checkbox checkbox-error">
+                <span class="custom_checkbox"></span>
+                <span class="checkbox_text checkbox-error_text">Текст checkbox</span>
+            </label>
+
+            <p></p>
+            <label style="user-select: none">
+                <input type="checkbox" disabled class="checkbox checkbox-disabled">
+                <span class="custom_checkbox" ></span>
+                <span class="checkbox_text">Текст checkbox</span>
+            </label>
+
+            <p></p>
+            <label style="user-select: none">
+                <input type="checkbox" checked disabled class="checkbox checkbox-disabled">
                 <span class="custom_checkbox" ></span>
                 <span class="checkbox_text">Текст checkbox</span>
             </label>
