--- a/timer/index.html
+++ b/timer/index.html
@@ -20,9 +20,11 @@
 <!--    -->
 <!--  </section>-->
 
-  <svg class="progress-bar" width="120" height="120">
-    <circle class="circle" stroke="#2699D4" stroke-width="4" cx="60" cy="60" r="52" fill="transparent" />
-  </svg>
+<!--  <svg class="progress-bar" width="120" height="120">-->
+<!--    <circle class="circle" stroke="#2699D4" stroke-width="4" cx="60" cy="60" r="52" fill="transparent" />-->
+<!--  </svg>-->
+
+
 
   <script src="script.js"></script>
 </body>
